--- a/HxHP.html
+++ b/HxHP.html
@@ -33,9 +33,9 @@
     <a href="SNKP.html">SNK</a>
     <a class="active" href="HxHP.html">HxH</a>
     <a href="TokyoghoulP.html">TOKYOGHOUL</a>
-    <a href="Deathnotep.html">DEATHNOTE</a>
     <a href="DBP.html">DB</a>
     <a href="MHAP.html">MHA</a>
+    <a href="OtherP.html">OTHER</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
