--- a/OtherP.html
+++ b/OtherP.html
@@ -33,15 +33,59 @@
     <a href="SNKP.html">SNK</a>
     <a href="HxHP.html">HxH</a>
     <a href="TokyoghoulP.html">TOKYOGHOUL</a>
-    <a class="active" href="Deathnotep.html">DEATHNOTE</a>
     <a href="DBP.html">DB</a>
     <a href="MHAP.html">MHA</a>
+    <a class="active" href="OtherP.html">OTHER</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
+      <h2 class="title-underline" >DEMON SLAYER</h2>
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img src="./img/Deathnote/Ryuk1.JPG" alt="Ryuk" class="appreciate-elem-img">
+                <img src="./img/OTHER/Demon Slayer/Nezukoadidas.jpeg" alt="Nezuko" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Nezuko Kamado</p>
+                    <p>Adidas</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: DYM</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/Tanjironike.jpeg" alt="Tanjiro" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Tanjiro Kamado</p>
+                    <p>Nike</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: DYM</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/zenitsutrasher.jpeg" alt="Zenitsu" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Zenitsu Agatasuma</p>
+                    <p>Trasher</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @FiFiGFX</p>
+                </div>
+            </li>
+          <li class="appreciate-elem">
+            <img src="./img/OTHER/Demon Slayer/Tanjirocoverhamza.JPG" alt="Tanjiro" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Tanjiro Kamado</p>
+                <p>Cover Hamza - 1994</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: coverxanimes</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+      <h2 class="title-underline" >DEATHNOTE</h2>
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Deathnote/Ryuk1.JPG" alt="Ryuk" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Ryuk</p>
                     <p>Dieu de la mort</p>
@@ -50,7 +94,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-                <img src="./img/Deathnote/LightYagamiSappe.jpeg" alt="Yagami" class="appreciate-elem-img">
+                <img src="./img/OTHER/Deathnote/LightYagamiSappe.jpeg" alt="Yagami" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Light Yagami</p>
                     <p>Streetstyle</p>
@@ -59,7 +103,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-                <img src="./img/Deathnote/Flowers.jpeg" alt="Flowers" class="appreciate-elem-img">
+                <img src="./img/OTHER/Deathnote/Flowers.jpeg" alt="Flowers" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>DEATH NOTE</p>
                     <p>Flowers</p>
@@ -68,7 +112,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-                <img src="./img/Deathnote/Ryuk2.JPG" alt="Ryuk" class="appreciate-elem-img">
+                <img src="./img/OTHER/Deathnote/Ryuk2.JPG" alt="Ryuk" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Ryuk</p>
                     <p>Dieu de la mort</p>
@@ -76,48 +120,6 @@
                     <p>Auteur: Heaten</p>
                 </div>
             </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img src="./img/Deathnote/Ryuk3.jpeg" alt="Ryuk" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Ryuk</p>
-                    <p>Dieu de la mort</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: DYM</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/Deathnote/L&Ryuk.jpeg" alt="L&Ryuk" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>L</p>
-                    <p>Brume & Fond Ryuk</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: @Faydoch</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/Deathnote/Lightyagami.png" alt="Light Yagami" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Light Yagami</p>
-                    <p>Inspiration manga</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: @FiFiGFX</p>
-                </div>
-            </li>
-          <li class="appreciate-elem">
-            <img src="./img/Deathnote/L.jpeg" alt="L" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>L</p>
-                <p>& his coffee</p>
-                <div class="appreciate-separator"></div>
-                <p>Auteur: PW</p>
-            </div>
-        </li>
         </ul>
     </div>
   </section>
