--- a/phone.html
+++ b/phone.html
@@ -36,6 +36,7 @@
     <a href="Deathnotep.html">DEATHNOTE</a>
     <a href="DBP.html">DB</a>
     <a href="MHAP.html">MHA</a>
+    <a href="OtherP.html">OTHER</a>
   </nav>
   <section class="phoneaccueil">
     <img class="phone-img" src="./img/MHA/izukunight.jpeg" alt="Izuku">
