--- a/OtherP.html
+++ b/OtherP.html
@@ -65,7 +65,7 @@
                     <p>Zenitsu Agatasuma</p>
                     <p>Trasher</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: @FiFiGFX</p>
+                    <p>Auteur: DYM</p>
                 </div>
             </li>
           <li class="appreciate-elem">
@@ -75,6 +75,48 @@
                 <p>Cover Hamza - 1994</p>
                 <div class="appreciate-separator"></div>
                 <p>Auteur: coverxanimes</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/nezukotanjiroovrax.jpeg" alt="Nezuko" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Nezuko & Tanjiro Kamado</p>
+                    <p>Love</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Ovrax</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/tomiokagiyu.jpeg" alt="Tomioka" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Tomioka Giyu</p>
+                    <p>dans une forêt</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: OXY</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/zenitsu2.jpg" alt="Zenitsu" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Zenitsu Agatasuma</p>
+                    <p>Hot theme</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Hermès</p>
+                </div>
+            </li>
+          <li class="appreciate-elem">
+            <img src="./img/OTHER/Demon Slayer/Inosukefleuve.JPG" alt="Inosuke" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Inosuke Hashibira</p>
+                <p>Fleuve</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @Opahk7</p>
             </div>
         </li>
         </ul>
