--- a/focus.html
+++ b/focus.html
@@ -31,13 +31,86 @@
     <div class="articles-container">
       <h2 class="title-underline3" >RETROUVEZ TOUS LES FOCUS</h2>
       <div class="article">
+        <img src="./img/Focus/Osharena/osharenapp.jpg" alt="Osharena">
+        <h2>Osharena</h2>
+        <div class="article-author">
+          <p>M. Lemercier</p>
+        </div>
+        <div class="article-content">
+          <p>Je promeus ce mois-ci <span class="gras">@osharena_</span>.
+            Il a récemment percé sur les réseaux avec une idée originale. Le principe de ses dessins est de reprendre un personnage d'animé et de le revêtir d'habits d'une marque de luxe.
+            Les personnages sont redessinés, et le style de ces derniers rend un visuel incroyable. Il a posté pour la première fois le 26 avril et compte aujourd'hui plus de 3825 abonnés et 82 personnages.
+            Toute la complexité des oeuvres résident dans la difficulté a bien redessiné le style vestimentaire d'une marque spécifique sur un personnage de manga.
+            Cette récente popularité lui a permis d'ouvrir un e-shop dans lequel on peut acheter les oeuvres de l'artiste.
+            Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & un lien vers son shop. 
+            Au plaisir pour un nouveau focus :)</p>
+        </div>
+        <div class="article-date">
+          <p>Août 2020</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img src="./img/Focus/Osharena/freezerosharena.jpg" alt="Freezer" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Freezer</p>
+                  <p>for BALMAIN</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: @Osharena_</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/Osharena/Doflamingoosharena.jpg" alt="Doflamingo" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Doflamingo</p>
+                <p>for MAISON KITSUNÉ</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @Osharena_</p>
+            </div>
+        </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/Osharena/itachiosharena.jpg" alt="itachi" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Itachi Uchiha</p>
+                <p>for DIOR</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @DYMdraw</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img src="./img/Focus/Osharena/mikasaorsharena.jpg" alt="Mikasa" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Mikasa Ackerman</p>
+              <p>for MAISON MARGIELA</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: @Osharena_</p>
+          </div>
+      </li>
+        </ul>
+    </div>
+  </section>
+  <div class="cover">
+    <a class="espacedroite" href="">
+      <i class="fas fa-shopping-cart"></i>SHOP
+    </a>
+    <a class="espacegauche" href="https://www.instagram.com/osharena_/">
+      <i class="fab fa-instagram"></i>Osharena_
+    </a>
+  </div>
+  <div class="content">
+    <div class="articles-container">
+      <div class="article">
         <img src="./img/Focus/DYM/DYMpplaw.jpeg" alt="Dym">
         <h2>DYMdraw</h2>
         <div class="article-author">
           <p>M. Lemercier</p>
         </div>
         <div class="article-content">
-          <p>Je promeus ce mois-ci <span class="gras">@DYMdraw</span>, pour ses dessins.
+          <p>Je promeus ce mois-ci <span class="gras">@DYMdraw</span>.
             Il a commencé sa "carrière" par de simple fonds d'écrans. Mais il s'est vite tourné vers le dessin de personnages d'animés, il a acquis une tablette graphique pour dessiner. Ses dessins lui ont vite valus une certaine reconnaissance. 
             Aujourd'hui il dessine un peu de tout, toujours dans son inspiration asiatique/japonaise. WALL. est heureux de le voir souvent s'associer avec @Astreoz pour de beaux fonds d'écrans. 
             Il organise souvent des concours sympathiques avec un simple dessin que tout le monde peut télécharger. Il élit ensuite la personne qui aura réalisé le plus beau fond d'écran avec son dessin. Les récompenses varient mais le concept est cool, il permet aux débutants de s'éssayer, se lancer.
@@ -106,10 +179,11 @@
           <p>M. Lemercier</p>
         </div>
         <div class="article-content">
-          <p>Je promeus ce mois-ci <span class="gras">@Drawinoff</span>, pour son travail et son style personnel. Il dessine des personnages d'animés avec un style atypique. <br> Le personnage apparaît déchiré, presque brulé des fois, et le moins que l'on puisse dire c'est qu'il a remporté un franc succès sur twitter! Les dessins sont très réussis, on ressent la patte de l'artiste.
+          <p>Je promeus ce mois-ci <span class="gras">@Drawinoff</span>. 
+          Il dessine des personnages d'animés avec un style atypique. <br> Le personnage apparaît déchiré, presque brulé des fois, et le moins que l'on puisse dire c'est qu'il a remporté un franc succès sur twitter! Les dessins sont très réussis, on ressent la patte de l'artiste.
           Avec le soutien de ses fans, il a ouvert sa propre e-boutique, trouvable actuellement sur ses réseaux (disponibles ci-dessous). Dans cette dernière, on y retrouve ses dessins qu'il vend pour une modique somme.
-        Je vous conseille d'aller faire un tour sur son profil pour lui donner de la force même si je suis sur que vous irez directement vous abonner lorsque vous verrez ses dessins ci-dessous. Je vous laisse son @ twitter/insta juste en dessous!
-      Au plaisir pour un nouveau focus :)</p>
+          Je vous conseille d'aller faire un tour sur son profil pour lui donner de la force même si je suis sur que vous irez directement vous abonner lorsque vous verrez ses dessins ci-dessous. Je vous laisse son @ twitter/insta juste en dessous!
+          Au plaisir pour un nouveau focus :)</p>
         </div>
         <div class="article-date">
           <p>Juin 2020</p>
@@ -172,7 +246,7 @@
           <p>M. Lemercier</p>
         </div>
         <div class="article-content">
-          <p>Je promeus aujourd'hui <span class="gras">@coverxanimes</span>, de son vrai nom Antoine pour son travail & sa créativité. 
+          <p>Je promeus aujourd'hui <span class="gras">@coverxanimes</span>. 
             Son concept est super original, il refait des covers d'albums du rap français en remplaçant l'artiste par un personnage d'animé. Le rendu est toujours très soigné, très propre. 
             Et pour les connaisseurs d'animés/mangas & de rap, les personnages choisis sont toujours les plus cohérents avec le style du/des rappeur(s). Vous pourrez trouver sous ses posts twitter, les versions fond d'écran de ses covers x animés qui ne sont pas disponible sur "WALL.".
             Vous pourrez également découvrir ci-dessous quelques unes de ses créations et je vous laisse son @ twitter/insta en dessous! 
