--- a/index.html
+++ b/index.html
@@ -45,130 +45,91 @@
     </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >À la une ce mois-ci, @hermesNDA_ !</h2>
+          <h2 class="title-underline" >L'arrivée de DEMON SLAYER sur "WALL." !</h2>
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                  <img src="./img/One piece/Usopp.JPG" alt="Usopp" class="appreciate-elem-img">
+                  <img src="./img/OTHER/Demon Slayer/Nezukoadidas.jpeg" alt="Nezuko" class="appreciate-elem-img">
                   <div class="appreciate-elem-text">
-                      <p>Usopp</p>
-                      <p>Sniper</p>
+                      <p>Nezuko Kamado</p>
+                      <p>Adidas</p>
                       <div class="appreciate-separator"></div>
-                      <p>Auteur: Hermès</p>
+                      <p>Auteur: DYM</p>
                   </div>
               </li>
               <li class="appreciate-elem">
-                <img src="./img/HxH/kurapikablue.JPG" alt="Kurapika" class="appreciate-elem-img">
+                <img src="./img/OTHER/Demon Slayer/Tanjirocoverhamza.JPG" alt="Tanjiro" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Kurapika Kuruta</p>
-                    <p>Judgment chain</p>
+                    <p>Tanjiro Kamado</p>
+                    <p>Cover Hamza - 1994</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: Hermès</p>
+                    <p>Auteur: coverxanimes</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="eren" src="./img/One piece/acevogue.jpeg" alt="Ace" class="appreciate-elem-img">
+              <img class="eren" src="./img/OTHER/Demon Slayer/zenitsu2.jpg" alt="Zenitsu" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Ace</p>
-                  <p>VOGUE</p>
+                  <p>Zenitsu agatsuma</p>
+                  <p>Hot theme</p>
                   <div class="appreciate-separator"></div>
                   <p>Auteur: Hermès</p>
               </div>
             </li>
-            <li class="appreciate-elem2">
-              <div class="appreciate-affiche">
-                <img src="img/affiche/hermesnda.jpg" alt="livai">
+            <li class="appreciate-elem">
+              <img class="eren" src="./img/OTHER/Demon Slayer/tomiokagiyu.jpeg" alt="Ace" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Tomioka Giyu</p>
+                  <p>Range son sabre</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: OXY</p>
               </div>
-              <div class="appreciate-elem2-text">
-                  <p>@HermesNDA_ est un des meilleurs en collage. Il sait utiliser de beaux arrières-plans et bien coller le/les personnages dessus. Les fonds d'écrans ne sont incroyables mais le résultat est propre, soigné. Il publie vraiment souvent, suivez-le. De plus il essaie à présent de vivre de sa passion. Il est ouvert aux commandes, tentez le coup !</p>
-              </div>
-          </li>
+            </li>
           </ul>
       </div>
     </section>
     <div class="pack">
       <div class="pack-container">
         <h2>STARTER PACK</h2>
-        <p>Flow stratosphérique</p>
+        <p>Don Quichotte Doflamingo</p>
           <div class="starter">
             <ul class="starter-list1">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/SPplacnhebarbeblanche.jpeg" alt="Barbe blanche">
+                <img class="borderpack" src="./img/affiche/Doflamingo/1.jpeg" alt="doflamingo">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/SPplanchekaido.png" alt="Kaido">
+                <img class="borderpack" src="./img/affiche/Doflamingo/2.jpeg" alt="doflamingo">
               </li>
             </ul>
             <ul class="starter-list2">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/SPplancheRoger.jpeg" alt="Roger">
+                <img class="borderpack" src="./img/affiche/Doflamingo/3.jpeg" alt="doflamingo">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/SPplancheShanjs.jpeg" alt="Shanks">
+                <img class="borderpack" src="./img/affiche/Doflamingo/4.jpeg" alt="doflamingo">
               </li>
             </ul>
           </div>
         </div>
       </div>
-    <section id="Appreciate" class="appreciate">
-      <div class="container">
-          <h2 class="title-underline" >#VOGUECHALLENGE</h2>
-          <ul class="appreciate-list">
-              <li class="appreciate-elem4">
-                  <img class="vogue" src="./img/DragonBall/goku&chichivogue.jpeg" alt="Goku" class="appreciate-elem-img">
-                  <div class="appreciate-elem-text">
-                      <p>Goku & Chichi</p>
-                      <p>VOGUE</p>
-                      <div class="appreciate-separator"></div>
-                      <p>Auteur: CLXMXNT</p>
-                  </div>
-              </li>
-              <li class="appreciate-elem4">
-                <img class="vogue" src="./img/One piece/acevogue.jpeg" alt="Ace" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Portgas D. Ace</p>
-                    <p>VOGUE</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: Hermes</p>
-                </div>
-              </li>
-              <div class="appreciate-banaccueil">
-              <li class="appreciate-elem3">
-              <img class="banniere" src="./img/Bannière/VOGUEkatakuri 12.54.10.JPG" alt="KATAKURI" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Charlotte Katakuri</p>
-                  <div class="appreciate-separator"></div>
-                  <p>VOGUE</p>
-              </div>
-              </li>
-              <li class="appreciate-elem3">
-                <img class="banniere" src="./img/Bannière/kakashivogueban.jpeg" alt="kakashi" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                  <p>Kakashi Hatake</p>
-                  <div class="appreciate-separator"></div>
-                  <p>VOGUE</p>
-                </div>
-              </li>
-            </div>
-        </ul>
-      </div>
-    </section>
     <div class="content">
       <div class="articles-container">
         <h2 class="title-underline2" >LE FOCUS</h2>
         <div class="article">
-          <img src="./img/Focus/DYM/DYMpplaw.jpeg" alt="Dym">
-          <h2>DYMdraw</h2>
+          <img src="./img/Focus/Osharena/osharenapp.jpg" alt="Osharena">
+          <h2>Osharena</h2>
           <div class="article-author">
             <p>M. Lemercier</p>
           </div>
           <div class="article-content">
-            <p>Je promeus ce mois-ci <span class="gras">@DYMdraw</span>, pour ses dessins.
-              Il a commencé sa "carrière" par de simple fonds d'écrans. Mais il s'est vite tourné vers le dessin de personnages d'animés, il a acquis une tablette graphique pour dessiner. Ses dessins lui ont vite valus une certaine reconnaissance. 
-              Aujourd'hui il dessine un peu de tout, toujours dans son inspiration asiatique/japonaise. WALL. est heureux de le voir souvent s'associer avec @Astreoz pour de beaux fonds d'écrans. 
-              Il organise souvent des concours sympathiques avec un simple dessin que tout le monde peut télécharger. Il élit ensuite la personne qui aura réalisé le plus beau fond d'écran avec son dessin. Les récompenses varient mais le concept est cool, il permet aux débutants de s'éssayer, se lancer.
-              Il vit actuellement de sa passion puisqu'il a ouvert son e-shop dans lequel on peut retrouver une collection de vêtements avec ses dessins. Il est également ouvert aux commandes pour un dessin personnalisé. 
-              Je vous laisse ci-dessous quelques uns de ses dessins de personnages d'animés ainsi que ses réseaux sociaux. 
+            <p>Je promeus ce mois-ci <span class="gras">@osharena_</span>.
+              Il a récemment percé sur les réseaux avec une idée originale. Le principe de ses dessins est de reprendre un personnage d'animé et de le revêtir d'habits d'une marque de luxe.
+              Les personnages sont redessinés, et le style de ces derniers rend un visuel incroyable. Il a posté pour la première fois le 26 avril et compte aujourd'hui plus de 3825 abonnés et 82 personnages.
+              Toute la complexité des oeuvres résident dans la difficulté a bien redessiné le style vestimentaire d'une marque spécifique sur un personnage de manga.
+              Cette récente popularité lui a permis d'ouvrir un e-shop dans lequel on peut acheter les oeuvres de l'artiste.
+              Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & un lien vers son shop. 
               Au plaisir pour un nouveau focus :)</p>
+          </div>
+          <div class="article-date">
+            <p>Août 2020</p>
           </div>
         </div>
       </div>
@@ -177,46 +138,50 @@
       <div class="container">
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                <img src="./img/Focus/DYM/dymkakashidraw.jpeg" alt="Kakashi" class="appreciate-elem-img">
+                <img src="./img/Focus/Osharena/freezerosharena.jpg" alt="Freezer" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Kakashi Hatake</p>
+                    <p>Freezer</p>
+                    <p>for BALMAIN</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: @DYMdraw</p>
+                    <p>Auteur: @Osharena_</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/DYM/dymluffydraw.jpeg" alt="Luffy" class="appreciate-elem-img">
+              <img src="./img/Focus/Osharena/Doflamingoosharena.jpg" alt="Doflamingo" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Monkey D. Luffy</p>
+                  <p>Doflamingo</p>
+                  <p>for MAISON KITSUNÉ</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @DYMdraw</p>
+                  <p>Auteur: @Osharena_</p>
               </div>
           </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/DYM/dymitachidraw.jpeg" alt="itachi" class="appreciate-elem-img">
+              <img src="./img/Focus/Osharena/itachiosharena.jpg" alt="itachi" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Itachi Uchiha</p>
+                  <p>for DIOR</p>
                   <div class="appreciate-separator"></div>
                   <p>Auteur: @DYMdraw</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/Focus/DYM/dymshikamarudraw.jpeg" alt="Shikamaru" class="appreciate-elem-img">
+            <img src="./img/Focus/Osharena/mikasaorsharena.jpg" alt="Mikasa" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Shikamaru Nara</p>
+                <p>Mikasa Ackerman</p>
+                <p>for MAISON MARGIELA</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: @DYMdraw</p>
+                <p>Auteur: @Osharena_</p>
             </div>
         </li>
           </ul>
       </div>
     </section>
     <div class="cover">
-      <a class="espacedroite" href="https://twitter.com/DYMdraw">
-        <i class="fab fa-twitter"></i>DYMdraw
+      <a class="espacedroite" href="">
+        <i class="fas fa-shopping-cart"></i>SHOP
       </a>
-      <a class="espacegauche" href="https://www.instagram.com/DYMdraw/">
-        <i class="fab fa-instagram"></i>DYMdraw
+      <a class="espacegauche" href="https://www.instagram.com/osharena_/">
+        <i class="fab fa-instagram"></i>Osharena_
       </a>
     </div>
     <footer>
