--- a/computer.html
+++ b/computer.html
@@ -38,6 +38,17 @@
           <li>
             <div class="espacetitre">
               <h2>
+                Disponible uniquement ici à l'affiche pour le moment !
+              </h2>
+            </div>
+            <img src="./img/PC/mikasavscuirassePC.jpeg" alt="Mikasa">
+            <h2>
+              Mikasa Ackerman vs Titan Cuirassé
+            </h2>
+          </li>
+          <li>
+            <div class="espacetitre">
+              <h2>
                 @jan0sair 
               </h2>
               <a href="https://twitter.com/jan0sair"><i class="fas fa-arrow-left fa-0.5x"></i> Discover</a>
