--- a/focus.html
+++ b/focus.html
@@ -111,7 +111,7 @@
         </div>
         <div class="article-content">
           <p>Je promeus ce mois-ci <span class="gras">@DYMdraw</span>.
-            Il a commencé sa "carrière" par de simple fonds d'écrans. Mais il s'est vite tourné vers le dessin de personnages d'animés, il a acquis une tablette graphique pour dessiner. Ses dessins lui ont vite valus une certaine reconnaissance. 
+            Il a commencé sa "carrière" par de simple fonds d'écrans. Mais il s'est petit à petit tourné vers le dessin de personnages d'animés, il a acquis une tablette graphique pour dessiner. Ses dessins lui ont vite valus une certaine reconnaissance. 
             Aujourd'hui il dessine un peu de tout, toujours dans son inspiration asiatique/japonaise. WALL. est heureux de le voir souvent s'associer avec @Astreoz pour de beaux fonds d'écrans. 
             Il organise souvent des concours sympathiques avec un simple dessin que tout le monde peut télécharger. Il élit ensuite la personne qui aura réalisé le plus beau fond d'écran avec son dessin. Les récompenses varient mais le concept est cool, il permet aux débutants de s'éssayer, se lancer.
             Il vit actuellement de sa passion puisqu'il a ouvert son e-shop dans lequel on peut retrouver une collection de vêtements avec ses dessins. Il est également ouvert aux commandes pour un dessin personnalisé. 
@@ -180,8 +180,9 @@
         </div>
         <div class="article-content">
           <p>Je promeus ce mois-ci <span class="gras">@Drawinoff</span>. 
-          Il dessine des personnages d'animés avec un style atypique. <br> Le personnage apparaît déchiré, presque brulé des fois, et le moins que l'on puisse dire c'est qu'il a remporté un franc succès sur twitter! Les dessins sont très réussis, on ressent la patte de l'artiste.
-          Avec le soutien de ses fans, il a ouvert sa propre e-boutique, trouvable actuellement sur ses réseaux (disponibles ci-dessous). Dans cette dernière, on y retrouve ses dessins qu'il vend pour une modique somme.
+          Il dessine à la main des personnages d'animés avec un style atypique. <br> Le personnage apparaît déchiré, presque brulé des fois, et le moins que l'on puisse dire c'est qu'il a remporté un franc succès sur twitter! Les dessins sont très réussis, on ressent la patte de l'artiste.
+          Avec le soutien de ses fans, il a ouvert son propre e-shop, trouvable actuellement sur ses réseaux (disponibles ci-dessous). 
+          Dans cette dernière, on y retrouve ses dessins qu'il vend pour une modique somme.
           Je vous conseille d'aller faire un tour sur son profil pour lui donner de la force même si je suis sur que vous irez directement vous abonner lorsque vous verrez ses dessins ci-dessous. Je vous laisse son @ twitter/insta juste en dessous!
           Au plaisir pour un nouveau focus :)</p>
         </div>
