--- a/OtherP.html
+++ b/OtherP.html
@@ -165,6 +165,49 @@
         </ul>
     </div>
   </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+      <h2 class="title-underline" >YOUR NAME / 7 DEADLY SINS</h2>
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img src="./img/OTHER/YourName/taki 12.51.43.jpeg" alt="Taki" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                <p>Taki</p>
+                <p>moonlight</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: ?</p>
+              </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/YourName/mitsuha 12.51.43.jpeg" alt="Mitsuha" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Mitsuha</p>
+                    <p>city</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/7DS/BAn.jpeg" alt="Ban" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ban</p>
+                    <p>Pêché de l'avarice</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @Gaby19__</p>
+                </div>
+            </li>
+          <li class="appreciate-elem">
+            <img src="./img/OTHER/7DS/Escanor.jpeg" alt="Escanor" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Escanor</p>
+                <p>Pêché de l'orgueil</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @Akasuna00</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
   <footer>
     <div class="block">
         <h2>SOCIAL</h2>
