--- a/computerOP.html
+++ b/computerOP.html
@@ -122,6 +122,28 @@
       </ul>
   </div>
 </section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/ZorovskillerPC.png" alt="Zoro" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Roronoa Zoro</p>
+                  <div class="appreciate-separator"></div>
+                  <p>vs Killer</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/ZoroWanovsKiller.jpeg" alt="Zoro" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Roronoa Zoro</p>
+                <div class="appreciate-separator"></div>
+                <p>vs Killer</p>
+            </div>
+        </li>
+      </ul>
+  </div>
+</section>
 <footer>
   <div class="block">
       <h2>SOCIAL</h2>
