--- a/other.html
+++ b/other.html
@@ -36,11 +36,11 @@
   <section class="otheraccueil">
     <div class="twitter">
       <h1>WALL. pense aussi à ses utilisateurs twitter fan d'animés!</h1>
-      <p>WALL. vous propose une petite selection de bannières twitter et de fond d'écran PC (en attente de nouveauté!)...</p>
+      <p>WALL. vous propose une sélection de bannières twitter et de fond d'écran PC (en attente de nouveauté!)...</p>
       <a href="Banner.html">Voir les bannières <i class="fab fa-twitter"></i></a>
     </div>
     <div class="computer">
-      <img class="other-img" src="./img/Zorowano.JPG" alt="ZoroWano">
+      <img class="other-img" src="./img/ZoroWanovsKiller.jpeg" alt="ZoroWano">
       <a href="computer.html">Voir Wallpaper <i class="fas fa-desktop"></i></a>
     </div>
   </section>
