--- a/focus.html
+++ b/focus.html
@@ -78,7 +78,7 @@
                 <p>Itachi Uchiha</p>
                 <p>for DIOR</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: @DYMdraw</p>
+                <p>Auteur: @Osharena_</p>
             </div>
         </li>
         <li class="appreciate-elem">
