--- a/phone.html
+++ b/phone.html
@@ -38,8 +38,8 @@
     <a href="OtherP.html">OTHER</a>
   </nav>
   <section class="phoneaccueil">
-    <img class="phone-img" src="./img/Naruto/painDYM 14.51.28.jpeg" alt="Pain">
-    <a href="./NarutoP.html" class="gotodbz">Voir Wallpaper NARUTO</a>
+    <img class="phone-img" src="./img/SNK/Livai2.JPG" alt="Livai2">
+    <a href="./SNKP.html" class="gotodbz">Voir Wallpaper SNK</a>
     <h1>Choisissez un manga ci-dessus, et trouvez votre bonheur!</h1>
     <p>Une selection de plus de 200 fonds d'écrans pour téléphone n'attend que vous. Venez les découvrir.</p>
   </section>
